Melhorias das rotas e mensagens entre outras correções.